--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,25 +6,24 @@ on:
       - published
 
 jobs:
+  lint:
+    uses: aaronmallen/activeinteractor/.github/workflows/lint.yml@main
   test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-ruby@v1.1.2
-        with:
-          ruby-version: 2.6
-          architecture: x64
-      - name: Bundle install
-        run: gem install bundler && bundler install --jobs 4  --retry 3
-      - name: Rake specs
-        run: bundle exec rake spec
-      - name: Rake build
-        run: bundle exec rake build
+    if: success()
+    needs:
+      - lint
+    uses: aaronmallen/activeinteractor/.github/workflows/test.yml@main
+    secrets:
+      cc-test-reporter-id: ${{ secrets.CC_TEST_REPORTER_ID }}
+  build:
+    if: success()
+    needs:
+      - test
+    uses: aaronmallen/activeinteractor/.github/workflows/build_gem.yml@main
   publish:
     name: Publish
     needs:
-      - test
+      - build
     if: success()
     runs-on: ubuntu-latest
     steps:
