--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
     labels:
       - dependabot
       - github-actions
-      - dependancies
+      - dependencies
     reviewers:
       - aaronmallen
   - package-ecosystem: bundler
@@ -24,6 +24,6 @@ updates:
     labels:
       - dependabot
       - bundler
-      - dependancies
+      - dependencies
     reviewers:
       - aaronmallen
