--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-ruby@v1.1.2
         with:
-          ruby-version: 2.6
+          ruby-version: '2.7'
           architecture: x64
       - name: Publish to RubyGems
         run: |
