--- a/.github/workflows/upload_sarif.yml
+++ b/.github/workflows/upload_sarif.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set Up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.5
+          ruby-version: '2.7'
           bundler-cache: true
 
       - name: Generate Sarif Output
